--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/node": "^18.7.18",
     "prisma": "^4.3.1",
-    "typescript": "^4.8.3"
+    "ts-node": "^10.9.1",
+    "tslib": "^2.4.0",
+    "typescript": "4.8.2"
   }
 }
